--- a/index.html
+++ b/index.html
@@ -205,17 +205,17 @@
     <div class="row py-3">
       <!-- single project -->
       <div class="col-sm-6 col-md-4 my-3">
-        <img src="img/projects-1.jpg" class="img-fluid img-thumbnail" alt="project" />
+        <img src="img/projects-1.jpeg" class="img-fluid img-thumbnail" alt="project" />
       </div>
       <!-- end of single project -->
       <!-- single project -->
       <div class="col-sm-6 col-md-4 my-3">
-        <img src="img/projects-5.jpg" class="img-fluid img-thumbnail" alt="project" />
+        <img src="img/projects-5.jpeg" class="img-fluid img-thumbnail" alt="project" />
       </div>
       <!-- end of single project -->
       <!-- single project -->
       <div class="col-sm-6 col-md-4 my-3">
-        <img src="img/projects-4.jpg" class="img-fluid img-thumbnail mx-auto" 
+        <img src="img/projects-4.jpeg" class="img-fluid img-thumbnail mx-auto" 
         alt="project" />
       </div>
       <!-- end of single project -->
@@ -223,17 +223,17 @@
     <div class="row py-3 no-gutters">
       <!-- single project -->
       <div class="col-sm-6 col-md-4 my-3">
-        <img src="img/projects-3.jpg" class="img-fluid" alt="project" />
+        <img src="img/projects-3.jpeg" class="img-fluid" alt="project" />
       </div>
       <!-- end of single project -->
       <!-- single project -->
       <div class="col-sm-6 col-md-4 my-3">
-        <img src="img/projects-2.jpg" class="img-fluid" alt="project" />
+        <img src="img/projects-2.jpeg" class="img-fluid" alt="project" />
       </div>
       <!-- end of single project -->
       <!-- single project -->
       <div class="col-sm-6 col-md-4 my-3">
-        <img src="img/projects-1.jpg" class="img-fluid" alt="project" />
+        <img src="img/projects-1.jpeg" class="img-fluid" alt="project" />
       </div>
       <!-- end of single project -->
     </div>
@@ -258,7 +258,7 @@
       <!-- team member -->
       <div class="col-md-6 col-lg-4 my-3">
         <div class="card">
-          <img src="/img/team-1.jpg" class="card-img-top" alt="member" />
+          <img src="img/team-1.jpg" class="card-img-top" alt="member" />
           <div class="card-body">
             <h5 class="card-title text-capitalize">team member</h5>
             <p class="card-text">
@@ -280,7 +280,7 @@
       <!-- team member -->
       <div class="col-md-6 col-lg-4 my-3">
         <div class="card">
-          <img src="/img/team-5.jpg" class="card-img-top" alt="member" />
+          <img src="img/team-5.jpg" class="card-img-top" alt="member" />
           <div class="card-body">
             <h5 class="card-title text-capitalize">team member</h5>
             <p class="card-text">
@@ -302,7 +302,7 @@
       <!-- team member -->
       <div class="col-md-6 col-lg-4 my-3 mx-auto">
         <div class="card">
-          <img src="/img/team-6.jpg" class="card-img-top" alt="member" />
+          <img src="img/team-6.jpg" class="card-img-top" alt="member" />
           <div class="card-body">
             <h5 class="card-title text-capitalize">team member</h5>
             <p class="card-text">
@@ -347,7 +347,7 @@
       <!-- team member -->
       <div class="col-md-6 col-lg-4 my-3 mx-auto">
         <div class="card">
-          <img src="/img/team-3.jpg" class="card-img-top" alt="member" />
+          <img src="img/team-3.jpg" class="card-img-top" alt="member" />
           <div class="card-body">
             <h5 class="card-title text-capitalize">team member</h5>
             <p class="card-text">
@@ -369,7 +369,7 @@
       <!-- team member -->
       <div class="col-md-6 col-lg-4 my-3 mx-auto">
         <div class="card">
-          <img src="/img/team-4.jpg" class="card-img-top" alt="member" />
+          <img src="img/team-4.jpg" class="card-img-top" alt="member" />
           <div class="card-body">
             <h5 class="card-title text-capitalize">team member</h5>
             <p class="card-text">
@@ -418,16 +418,16 @@
           <!-- images -->
           <div class="carousel-inner my-3">
             <div class="carousel-item active">
-              <img src="/img/projects-1.jpeg" alt="project" class="d-block w-100" />
+              <img src="img/projects-1.jpeg" alt="project" class="d-block w-100" />
             </div>
             <div class="carousel-item">
-              <img src="/img/projects-2.jpeg" alt="project" class="d-block w-100" />
+              <img src="img/projects-2.jpeg" alt="project" class="d-block w-100" />
             </div>
             <div class="carousel-item">
-              <img src="/img/projects-3.jpeg" alt="project" class="d-block w-100" />
+              <img src="img/projects-3.jpeg" alt="project" class="d-block w-100" />
             </div>
             <div class="carousel-item">
-              <img src="/img/projects-4.jpeg" alt="project" class="d-block w-100" />
+              <img src="img/projects-4.jpeg" alt="project" class="d-block w-100" />
             </div>
           </div>
           <!-- end of images -->
@@ -482,7 +482,7 @@
     <!-- End of section-title -->
     <div class="row">
       <div class="col-md-4">
-        <img src="/img/team-1.jpg" class="img-fluid img-thumbnail" alt="projects" />
+        <img src="img/team-1.jpg" class="img-fluid img-thumbnail" alt="projects" />
         <h2 class="my-3 text-warning">project warning</h2>
         <p class="text-muted">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere,
@@ -490,7 +490,7 @@
         </p>
       </div>
       <div class="col-md-4 mt-3">
-        <img src="/img/projects-2.jpeg" class="img-fluid img-thumbnail" alt="projects" />
+        <img src="img/projects-2.jpeg" class="img-fluid img-thumbnail" alt="projects" />
         <h2 class="my-3 text-warning">project warning</h2>
         <p class="text-muted">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere,
@@ -498,7 +498,7 @@
         </p>
       </div>
       <div class="col-md-4 mt-5">
-        <img src="/img/projects-3.jpeg" class="img-fluid img-thumbnail" alt="projects" />
+        <img src="img/projects-3.jpeg" class="img-fluid img-thumbnail" alt="projects" />
         <h2 class="my-3 text-warning">project warning</h2>
         <p class="text-muted">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere,
